chore: [] Sticky header - Changed the header from position fixed to sticky, to no longer overlap parts of the components - Removed margin-top values wherever they were added since they are no longer needed -

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -5,7 +5,7 @@ html {
 html,
 body,
 #__next {
-  height: 100%;
+  min-height: 100%;
 }
 
 body.is-scroll-locked {
